<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="@color/black"
        android:textSize="14pt"
        android:layout_marginTop="60dp"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_volume_up_24" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/prfbtt"
        android:id="@+id/prfbtt" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbrbtt"
        android:layout_gravity="center"
        android:id="@+id/lbrbtt" />

</LinearLayout>