<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailAudio">

    <ImageView
        android:id="@+id/imgv2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        android:contentDescription="@string/clk" />

    <TextView
        android:id="@+id/dtlttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="@string/txtv"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/dtldesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/txtv"
        android:textSize="7pt" />

    <Button
        android:id="@+id/plybtt"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/plysfx" />
</LinearLayout>